--- a/README
+++ b/README
@@ -1,3 +1,3 @@
+This repo documents our approch for our project in "Machine learning in Medical Image Processing"
 
-HI HOW IS IT GOING
-yes perfect
+More details can be found under Wiki.
