Delete print-commands and TODO-comments.

--- a/src/app.ipynb
+++ b/src/app.ipynb
@@ -191,8 +191,6 @@
     "        \n",
     "        if nr_samples is not None:\n",
     "            class_image_lists[i] = class_image_lists[i][:nr_samples]\n",
-    "\n",
-    "    print(\"Point 0\")\n",
     "            \n",
     "    # Get datapoints as np-arrays: \n",
     "    datapoints = []\n",
@@ -201,7 +199,7 @@
     "        for z, current_dp in enumerate(class_image_lists[j]):\n",
     "            \n",
     "            # Convert current image into a np-arry:\n",
-    "            current_dp = img_to_array(current_dp, dtype=np.uint8) # TODO: Delete: , dtype=np.uint8\n",
+    "            current_dp = img_to_array(current_dp, dtype=np.uint8) \n",
     "            current_dp = np.expand_dims(current_dp, axis=0)    \n",
     "            \n",
     "            datapoints.append(current_dp)\n",
@@ -212,15 +210,11 @@
     "                del temp\n",
     "    \n",
     "            if z % 100 == 0:\n",
-    "                print(\"Z:\", z)\n",
-    "                print(\"Number of unreachable objects:\", gc.collect())\n",
+    "                gc.collect()\n",
     "            \n",
-    "        print(\"Point 1.25\")\n",
-    "    \n",
-    "    print(\"Point 1.5\")\n",
-    "    datapoints = np.vstack(datapoints) # TODO: Change class_image_lists to datapoints \n",
-    "    print(\"Point 1\")\n",
-    "    \n",
+    "\n",
+    "    datapoints = np.vstack(datapoints)  \n",
+    "\n",
     "    # Get the labels from datapoints:\n",
     "    label_list = []\n",
     "    for k in range(0, nr_classes):\n",
@@ -240,15 +234,13 @@
     "        \n",
     "        label_list.append(class_labels)\n",
     "    \n",
-    "    print(\"Point 2\")\n",
-    "    \n",
     "    # Reshape label arrays:\n",
     "    labels = label_list[0].T\n",
     "    \n",
     "    for ls in label_list[1:]:\n",
     "        labels = np.append(labels, ls.T, axis=0)\n",
     "    \n",
-    "    return datapoints, labels # TODO: Change class_image_lists to datapoints \n"
+    "    return datapoints, labels \n"
    ]
   },
   {
@@ -287,7 +279,7 @@
     "            image = image.filter(ImageFilter.GaussianBlur(radius=blur_radius)) # default radius = 2;\n",
     "        \n",
     "        if deep_copy:\n",
-    "            preprocessed_images.append(image) # TODO: Delete Image to array function;\n",
+    "            preprocessed_images.append(image)\n",
     "        else:\n",
     "            preprocessed_images[z] = image\n",
     "        \n",
